syntax = "proto3";

package grpc_tls;

service Greeter {
    rpc SayHello (DataRequest) returns (DataResponse) {}
}

message DataRequest {
    string name = 1                                                                                                                                                                                   ;
    bytes data = 21;
}

message DataResponse {
    string message = 1;
}
